syntax = "proto3";

package pb;

import "user.proto";

option go_package =  "github.com/daniel/master-golang/pb";

message CreateUserRequest {
    string name = 1;
    string password = 2;
    string full_name = 3;
    string email = 4;
}

message userReponse {
    User user = 1;
}